overflow fix

--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -2,7 +2,7 @@
   width: 400px;
   padding: 24px;
   border-radius: 30px;
-  background-color: rgb(184, 236, 236);
+  background-color: rgb(182, 223, 223);
   height: 600px;
   box-shadow: 1px 1px 3px;
   display: flex;
