--- a/src/styles/buttons.css
+++ b/src/styles/buttons.css
@@ -6,7 +6,7 @@
 .button {
   width: 70px;
   height: 70px;
-  border-radius: 5%;
+  border-radius: 5px;
   outline: 0;
 }
 
